Fix weird scrolling of modal on mobile

--- a/css/menu.css
+++ b/css/menu.css
@@ -71,6 +71,7 @@ li a:hover:not(.active) {
 #settingsModal > * {
   padding-left: 5%;
   padding-bottom: 50px;
+  overflow-y: initial !important;
 }
 
 /* The Modal (background) */
@@ -78,7 +79,7 @@ li a:hover:not(.active) {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 100px;  /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -95,11 +96,16 @@ li a:hover:not(.active) {
   padding: 20px;
   border: 1px solid #888;
   width: 40%;
+  overflow-y: auto;
 }
 
 @media only screen and (max-width: 1000px) {
   .modal-content {
     width: 90%;
+  }
+
+  .modal {
+      padding-top: 0;
   }
 }
 
